# 003-poc-FeedSummery

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  sample.env  sample.html
.devcontainer/: devcontainer.json
datapipeline/get_feed/: compose.yml  lambda_function.py  lambda_handler.py  sample.env
datapipeline/src/: Dockerfile  hoge.py  main.py  pyproject.toml
datapipeline/src/rss/: rss.py
datapipeline/src/util/: SQS.py  __init__.py  notion.py  target_rss.json
datapipeline/template/: requirements.txt
datapipeline/test/: test_get_feed.py
datapipeline/test/util/: RSS.py
document/: SystemOverview.md  memo.md  コンテナについて.md
src/: main.py  sample.ipynb
src/llm/: base_prompt.py
src/rss/: __init__.py  rss.py
src/util/: __init__.py  log.py  rss_info.py  rss_urls.py  target_rss.json
terraform/: ecr.tf  lambda.tf
terraform/module/backend/: main.tf  variable.tf
test/util/: test_rss_urls.py
