[tool.poetry]
name = "rss"
version = "0.1.0"
description = ""
authors = ["Yu Hayashida <yu_hayashida@irep.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.9.1"
mypy = "^1.5.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
feedparser = "^6.0.10"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
